--- a/src/main/webapp/scripts/app/entities/codeValues/codeValuess.html
+++ b/src/main/webapp/scripts/app/entities/codeValues/codeValuess.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>CodeValuess</h2>
+    <h2>CodeValues</h2>
     <jh-alert></jh-alert>
     <div class="container">
         <div class="row">
