--- a/src/main/webapp/scripts/app/entities/holidays/holidayss.html
+++ b/src/main/webapp/scripts/app/entities/holidays/holidayss.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Holidayss</h2>
+    <h2>Holidays</h2>
     <jh-alert></jh-alert>
     <div class="container">
         <div class="row">
