ID, Last Changed Date & Last Changed By skipped

--- a/src/main/webapp/scripts/app/entities/codeValues/codeValues-dialog.html
+++ b/src/main/webapp/scripts/app/entities/codeValues/codeValues-dialog.html
@@ -8,11 +8,11 @@
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
+       <!-- <div class="form-group">
             <label for="id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="codeValues.id" readonly />
-        </div>
+        </div>-->
         <div class="form-group">
             <label class="control-label" for="field_codeType">CodeType</label>
             <input type="text" class="form-control" name="codeType" id="field_codeType"
