--- a/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocation-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocation-dialog.html
@@ -8,11 +8,11 @@
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
+       <!-- <div class="form-group">
             <label for="id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="employeeAllocation.id" readonly />
-        </div>
+        </div>-->
         <div class="form-group">
             <label class="control-label" for="field_project">Project</label>
             <input type="text" class="form-control" name="project" id="field_project"
