--- a/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocation-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocation-dialog.html
@@ -15,9 +15,12 @@
         </div>-->
         <div class="form-group">
             <label class="control-label" for="field_project">Project</label>
-            <input type="text" class="form-control" name="project" id="field_project"
+        <!--    <input type="text" class="form-control" name="project" id="field_project"
                     ng-model="employeeAllocation.project"
-                     />
+                     />-->
+            <select name="project" id="field_project" class="form-control" ng-model="employeeAllocation.project" ng-options="cv.codeValue as cv.codeValue for cv in projects">
+                <option value="">---- Select Project -----</option>
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label" for="field_startDate">StartDate</label>
@@ -37,9 +40,12 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="field_location">Location</label>
-            <input type="text" class="form-control" name="location" id="field_location"
+           <!-- <input type="text" class="form-control" name="location" id="field_location"
                     ng-model="employeeAllocation.location"
-                     />
+                     />-->
+            <select name="location" id="field_location" class="form-control" ng-model="employeeAllocation.project" ng-options="cv.codeValue as cv.codeValue for cv in locations">
+                <option value="">---- Select Project -----</option>
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label" for="field_allocation">Allocation</label>
