--- a/src/main/webapp/scripts/app/entities/holidays/holidays-dialog.html
+++ b/src/main/webapp/scripts/app/entities/holidays/holidays-dialog.html
@@ -9,11 +9,6 @@
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
         <div class="form-group">
-            <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="holidays.id" readonly />
-        </div>
-        <div class="form-group">
             <label class="control-label" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
                     ng-model="holidays.name"
@@ -37,23 +32,9 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="field_location">Location</label>
-            <input type="text" class="form-control" name="location" id="field_location"
-                    ng-model="holidays.location"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_lastChangedBy">LastChangedBy</label>
-            <input type="text" class="form-control" name="lastChangedBy" id="field_lastChangedBy"
-                    ng-model="holidays.lastChangedBy"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_lastChangedDt">LastChangedDt</label>
-            <input id="field_lastChangedDt" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="holidays.lastChangedDt" is-open="datePickerForLastChangedDt.status.opened"
-            />
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="datePickerForLastChangedDtOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-            </span>
+			<select name="location" id="field_location" class="form-control" ng-model="holidays.location" ng-options="cv.codeValue as cv.codeValue for cv in locations">
+                <option value="">---- Select Location -----</option>
+            </select>
         </div>
 
     </div>
