--- a/src/main/webapp/scripts/app/entities/holidays/holidayss.html
+++ b/src/main/webapp/scripts/app/entities/holidays/holidayss.html
@@ -24,7 +24,6 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th><span>ID</span></th>
                     <th><span>Name</span></th>
                     <th><span>StartDate</span></th>
                     <th><span>EndDate</span></th>
@@ -36,10 +35,9 @@
             </thead>
             <tbody>
                 <tr ng-repeat="holidays in holidayss track by holidays.id">
-                    <td><a ui-sref="holidays.detail({id:holidays.id})">{{holidays.id}}</a></td>
-                    <td>{{holidays.name}}</td>
-                        <td>{{holidays.startDate | date:'mediumDate'}}</td>
-                        <td>{{holidays.endDate | date:'mediumDate'}}</td>
+                    <td><a ui-sref="holidays.detail({id:holidays.id})">{{holidays.name}}</a></td>
+                    <td>{{holidays.startDate | date:'mediumDate'}}</td>
+                    <td>{{holidays.endDate | date:'mediumDate'}}</td>
                     <td>{{holidays.location}}</td>
                     <td>{{holidays.lastChangedBy}}</td>
                         <td>{{holidays.lastChangedDt | date:'mediumDate'}}</td>
