Insert/Update logged in user as Last Changed By and sysdate as Last Changed date for Create and Modify entries

--- a/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocation-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocation-dialog.html
@@ -59,7 +59,7 @@
                     ng-model="employeeAllocation.allocation"
                      />
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label class="control-label" for="field_lastChangedDate">LastChangedDate</label>
             <input id="field_lastChangedDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="employeeAllocation.lastChangedDate" is-open="datePickerForLastChangedDate.status.opened"
             />
@@ -72,7 +72,7 @@
             <input type="text" class="form-control" name="lastChangedby" id="field_lastChangedby"
                     ng-model="employeeAllocation.lastChangedby"
                      />
-        </div>
+        </div>-->
         <div class="form-group">
             <label class="control-label" for="field_role">Role</label>
            <!-- <input type="text" class="form-control" name="role" id="field_role"
