--- a/src/main/webapp/scripts/app/entities/codeValues/codeValues-dialog.html
+++ b/src/main/webapp/scripts/app/entities/codeValues/codeValues-dialog.html
@@ -41,7 +41,7 @@
                 <button type="button" class="btn btn-default" ng-click="datePickerForExpiryDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label class="control-label" for="field_lastChangedBy">LastChangedBy</label>
             <input type="text" class="form-control" name="lastChangedBy" id="field_lastChangedBy"
                     ng-model="codeValues.lastChangedBy"
@@ -54,7 +54,7 @@
             <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="datePickerForLastChangedDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
-        </div>
+        </div>-->
 
     </div>
     <div class="modal-footer">
