--- a/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
@@ -41,7 +41,7 @@
                 <option value="">---- Select Domain -----</option>
             </select>
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label class="control-label" for="field_lastChangedDate">LastChangedDate</label>
             <input id="field_lastChangedDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="employee.lastChangedDate" is-open="datePickerForLastChangedDate.status.opened"
             />
@@ -54,7 +54,7 @@
             <input type="text" class="form-control" name="lastChangedBy" id="field_lastChangedBy"
                     ng-model="employee.lastChangedBy"
                      />
-        </div>
+        </div>-->
 
     </div>
     <div class="modal-footer">
