--- a/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFF-dialog.html
+++ b/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFF-dialog.html
@@ -9,15 +9,10 @@
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
         <div class="form-group">
-            <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="rOLE_TARIFF.id" readonly />
-        </div>
-        <div class="form-group">
             <label class="control-label" for="field_role">Role</label>
-            <input type="text" class="form-control" name="role" id="field_role"
-                    ng-model="rOLE_TARIFF.role"
-                     />
+			<select name="role" id="field_role" class="form-control" ng-model="rOLE_TARIFF.role" ng-options="cv.codeValue as cv.codeValue for cv in roles">
+                <option value="">---- Select Role -----</option>
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label" for="field_tariff">Tariff</label>
@@ -27,9 +22,9 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="field_location">Location</label>
-            <input type="text" class="form-control" name="location" id="field_location"
-                    ng-model="rOLE_TARIFF.location"
-                     />
+			<select name="location" id="field_location" class="form-control" ng-model="rOLE_TARIFF.location" ng-options="cv.codeValue as cv.codeValue for cv in locations">
+                <option value="">---- Select Location -----</option>
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label" for="field_effectiveDate">EffectiveDate</label>
@@ -46,20 +41,6 @@
             <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="datePickerForExpiryDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_lastChangedDate">LastChangedDate</label>
-            <input id="field_lastChangedDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="rOLE_TARIFF.lastChangedDate" is-open="datePickerForLastChangedDate.status.opened"
-            />
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="datePickerForLastChangedDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-            </span>
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_lastChangedBy">LastChangedBy</label>
-            <input type="text" class="form-control" name="lastChangedBy" id="field_lastChangedBy"
-                    ng-model="rOLE_TARIFF.lastChangedBy"
-                     />
         </div>
 
     </div>
