* some minor corrections and text changes

--- a/src/main/webapp/scripts/app/entities/codeValues/codeValues-detail.html
+++ b/src/main/webapp/scripts/app/entities/codeValues/codeValues-detail.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h2><span>CodeValues</span> {{codeValues.id}}</h2>
+    <h2><span>CodeValue - </span> {{codeValues.codeValue}}</h2>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
