--- a/src/main/webapp/scripts/app/entities/employee/employee-detail.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-detail.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h2><span>Employee</span> {{employee.id}}</h2>
+    <h2><span>Employee - </span> {{employee.name}}</h2>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
