--- a/src/main/webapp/scripts/app/entities/holidays/holidays-detail.html
+++ b/src/main/webapp/scripts/app/entities/holidays/holidays-detail.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h2><span>Holidays</span> {{holidays.id}}</h2>
+    <h2><span>Holiday - </span> {{holidays.name}}</h2>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
