--- a/src/main/webapp/scripts/app/entities/holidays/holidayss.html
+++ b/src/main/webapp/scripts/app/entities/holidays/holidayss.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-4">
                 <button class="btn btn-primary" ui-sref="holidays.new">
-                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new Holidays</span>
+                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new Holiday</span>
                 </button>
             </div>
             <div class="col-md-8">
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
                     </div>
-                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a Holidays</span>
+                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a Holiday</span>
                     </button>
                 </form>
             </div>
