--- a/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFF-detail.html
+++ b/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFF-detail.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h2><span>ROLE_TARIFF</span> {{rOLE_TARIFF.id}}</h2>
+    <h2><span>Role Tariff - </span> {{rOLE_TARIFF.role}}</h2>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
