--- a/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFFs.html
+++ b/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFFs.html
@@ -1,11 +1,11 @@
 <div>
-    <h2>ROLE_TARIFFs</h2>
+    <h2>Role Tariffs</h2>
     <jh-alert></jh-alert>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
                 <button class="btn btn-primary" ui-sref="rOLE_TARIFF.new">
-                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new ROLE_TARIFF</span>
+                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new Role Tariff</span>
                 </button>
             </div>
             <div class="col-md-8">
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
                     </div>
-                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a ROLE_TARIFF</span>
+                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a Role Tariff</span>
                     </button>
                 </form>
             </div>
