--- a/src/main/webapp/scripts/app/entities/codeValues/codeValues-delete-dialog.html
+++ b/src/main/webapp/scripts/app/entities/codeValues/codeValues-delete-dialog.html
@@ -5,7 +5,7 @@
         <h4 class="modal-title">Confirm delete operation</h4>
     </div>
     <div class="modal-body">
-        <p>Are you sure you want to delete this CodeValues?</p>
+        <p>Are you sure you want to delete this CodeValue?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
