--- a/src/main/webapp/scripts/app/entities/codeValues/codeValues-dialog.html
+++ b/src/main/webapp/scripts/app/entities/codeValues/codeValues-dialog.html
@@ -4,15 +4,10 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myCodeValuesLabel">Create or edit a CodeValues</h4>
+        <h4 class="modal-title" id="myCodeValuesLabel">Create or edit a CodeValue</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-       <!-- <div class="form-group">
-            <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="codeValues.id" readonly />
-        </div>-->
         <div class="form-group">
             <label class="control-label" for="field_codeType">CodeType</label>
             <input type="text" class="form-control" name="codeType" id="field_codeType"
@@ -41,20 +36,6 @@
                 <button type="button" class="btn btn-default" ng-click="datePickerForExpiryDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
         </div>
-        <!--<div class="form-group">
-            <label class="control-label" for="field_lastChangedBy">LastChangedBy</label>
-            <input type="text" class="form-control" name="lastChangedBy" id="field_lastChangedBy"
-                    ng-model="codeValues.lastChangedBy"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_lastChangedDate">LastChangedDate</label>
-            <input id="field_lastChangedDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="codeValues.lastChangedDate" is-open="datePickerForLastChangedDate.status.opened"
-            />
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="datePickerForLastChangedDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-            </span>
-        </div>-->
 
     </div>
     <div class="modal-footer">
