--- a/src/main/webapp/scripts/app/entities/codeValues/codeValuess.html
+++ b/src/main/webapp/scripts/app/entities/codeValues/codeValuess.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-4">
                 <button class="btn btn-primary" ui-sref="codeValues.new">
-                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new CodeValues</span>
+                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new CodeValue</span>
                 </button>
             </div>
             <div class="col-md-8">
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
                     </div>
-                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a CodeValues</span>
+                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a CodeValue</span>
                     </button>
                 </form>
             </div>
@@ -24,25 +24,19 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                 <!--   <th><span>ID</span></th>-->
                     <th><span>CodeType</span></th>
                     <th><span>CodeValue</span></th>
                     <th><span>EffectiveDate</span></th>
                     <th><span>ExpiryDate</span></th>
-                    <th><span>LastChangedBy</span></th>
-                    <th><span>LastChangedDate</span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="codeValues in codeValuess track by codeValues.id">
-                    <!--<td><a ui-sref="codeValues.detail({id:codeValues.id})">{{codeValues.id}}</a></td>-->
                     <td>{{codeValues.codeType}}</td>
-                    <td>{{codeValues.codeValue}}</td>
-                        <td>{{codeValues.effectiveDate | date:'mediumDate'}}</td>
-                        <td>{{codeValues.expiryDate | date:'mediumDate'}}</td>
-                    <td>{{codeValues.lastChangedBy}}</td>
-                        <td>{{codeValues.lastChangedDate | date:'mediumDate'}}</td>
+                    <td><a ui-sref="codeValues.detail({id:codeValues.id})">{{codeValues.codeValue}}</a></td>
+                    <td>{{codeValues.effectiveDate | date:'mediumDate'}}</td>
+                    <td>{{codeValues.expiryDate | date:'mediumDate'}}</td>
                     <td>
                         <button type="submit"
                                 ui-sref="codeValues.detail({id:codeValues.id})"
