--- a/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
@@ -3,17 +3,10 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myEmployeeLabel">Create or edit a Employee</h4>
+        <h4 class="modal-title" id="myEmployeeLabel">Create or edit an Employee</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-<!--
-        <div class="form-group">
-            <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="employee.id" readonly />
-        </div>
--->
         <div class="form-group">
             <label class="control-label" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
@@ -34,27 +27,10 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="field_domain">Domain</label>
-            <!--<input type="text" class="form-control" name="domain" id="field_domain"
-                    ng-model="employee.domain"
-                     />-->
             <select name="domain" id="field_domain" class="form-control" ng-model="employee.domain" ng-options="cv.codeValue as cv.codeValue for cv in domains">
                 <option value="">---- Select Domain -----</option>
             </select>
         </div>
-        <!--<div class="form-group">
-            <label class="control-label" for="field_lastChangedDate">LastChangedDate</label>
-            <input id="field_lastChangedDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="employee.lastChangedDate" is-open="datePickerForLastChangedDate.status.opened"
-            />
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="datePickerForLastChangedDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-            </span>
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_lastChangedBy">LastChangedBy</label>
-            <input type="text" class="form-control" name="lastChangedBy" id="field_lastChangedBy"
-                    ng-model="employee.lastChangedBy"
-                     />
-        </div>-->
 
     </div>
     <div class="modal-footer">
