--- a/src/main/webapp/scripts/app/entities/employee/employees.html
+++ b/src/main/webapp/scripts/app/entities/employee/employees.html
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
                     </div>
-                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a Employee</span>
+                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search an Employee</span>
                     </button>
                 </form>
             </div>
@@ -28,8 +28,6 @@
                     <th><span>AssociateId</span></th>
                     <th><span>RaboId</span></th>
                     <th><span>Domain</span></th>
-                <!--    <th><span>LastChangedDate</span></th>
-                    <th><span>LastChangedBy</span></th>-->
                     <th></th>
                 </tr>
             </thead>
@@ -39,8 +37,6 @@
                     <td>{{employee.associateId}}</td>
                     <td>{{employee.raboId}}</td>
                     <td>{{employee.domain}}</td>
-             <!--       <td>{{employee.lastChangedDate | date:'mediumDate'}}</td>
-                    <td>{{employee.lastChangedBy}}</td>-->
                     <td>
                         <button type="submit"
                                 ui-sref="employee.detail({id:employee.id})"
