--- a/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocations.html
+++ b/src/main/webapp/scripts/app/entities/employeeAllocation/employeeAllocations.html
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
                     </div>
-                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a EmployeeAllocation</span>
+                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search an EmployeeAllocation</span>
                     </button>
                 </form>
             </div>
@@ -24,29 +24,23 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                   <!-- <th><span>ID</span></th>-->
                     <th><span>Project</span></th>
                     <th><span>StartDate</span></th>
                     <th><span>EndDate</span></th>
                     <th><span>Location</span></th>
                     <th><span>Allocation</span></th>
-                    <th><span>LastChangedDate</span></th>
-                    <th><span>LastChangedby</span></th>
                     <th><span>Role</span></th>
-                    <th><span>employee</span></th>
+                    <th><span>Employee</span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="employeeAllocation in employeeAllocations track by employeeAllocation.id">
-                 <!--   <td><a ui-sref="employeeAllocation.detail({id:employeeAllocation.id})">{{employeeAllocation.id}}</a></td>-->
                     <td>{{employeeAllocation.project}}</td>
-                        <td>{{employeeAllocation.startDate | date:'mediumDate'}}</td>
-                        <td>{{employeeAllocation.endDate | date:'mediumDate'}}</td>
+                    <td>{{employeeAllocation.startDate | date:'mediumDate'}}</td>
+                    <td>{{employeeAllocation.endDate | date:'mediumDate'}}</td>
                     <td>{{employeeAllocation.location}}</td>
                     <td>{{employeeAllocation.allocation}}</td>
-                        <td>{{employeeAllocation.lastChangedDate | date:'mediumDate'}}</td>
-                    <td>{{employeeAllocation.lastChangedby}}</td>
                     <td>{{employeeAllocation.role}}</td>
                     <td>
                         <a ui-sref="employee.detail({id:employeeAllocation.employee.id})">{{employeeAllocation.employee.name}}</a>
