--- a/src/main/webapp/scripts/app/entities/employee/employee-detail.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-detail.html
@@ -31,7 +31,7 @@
                     <span>RaboId</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{employee.raboId}}</span>
+                    <span class="form-control-static">{{employee.clientId}}</span>
                 </td>
             </tr>
             <tr>
