--- a/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
@@ -21,8 +21,8 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="field_raboId">RaboId</label>
-            <input type="text" class="form-control" name="raboId" id="field_raboId"
-                    ng-model="employee.raboId"
+            <input type="text" class="form-control" name="clientId" id="field_raboId"
+                    ng-model="employee.clientId"
                      />
         </div>
         <div class="form-group">
