--- a/src/main/webapp/scripts/app/entities/employee/employees.html
+++ b/src/main/webapp/scripts/app/entities/employee/employees.html
@@ -35,7 +35,7 @@
                 <tr ng-repeat="employee in employees track by employee.id">
                     <td><a ui-sref="employee.detail({id:employee.id})">{{employee.name}}</td>
                     <td>{{employee.associateId}}</td>
-                    <td>{{employee.raboId}}</td>
+                    <td>{{employee.clientId}}</td>
                     <td>{{employee.domain}}</td>
                     <td>
                         <button type="submit"
