Naming changes for the attribute

--- a/src/main/webapp/scripts/app/entities/employee/employee-detail.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-detail.html
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <td>
-                    <span>RaboId</span>
+                    <span>ClientId</span>
                 </td>
                 <td>
                     <span class="form-control-static">{{employee.clientId}}</span>
