--- a/src/main/webapp/scripts/app/entities/employee/employees.html
+++ b/src/main/webapp/scripts/app/entities/employee/employees.html
@@ -26,7 +26,7 @@
                 <tr>
                     <th><span>Name</span></th>
                     <th><span>AssociateId</span></th>
-                    <th><span>RaboId</span></th>
+                    <th><span>ClientId</span></th>
                     <th><span>Domain</span></th>
                     <th></th>
                 </tr>
