--- a/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
@@ -20,7 +20,7 @@
                      />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_raboId">RaboId</label>
+            <label class="control-label" for="field_raboId">ClientId</label>
             <input type="text" class="form-control" name="clientId" id="field_raboId"
                     ng-model="employee.clientId"
                      />
