--- a/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
@@ -20,8 +20,8 @@
                      />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_raboId">ClientId</label>
-            <input type="text" class="form-control" name="clientId" id="field_raboId"
+            <label class="control-label" for="field_clientId">ClientId</label>
+            <input type="text" class="form-control" name="clientId" id="field_clientId"
                     ng-model="employee.clientId"
                      />
         </div>
