--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,7 +27,7 @@
             <div class="well" ui-view="content"></div>
 
             <div class="footer">
-                <p translate="footer"><a href="http://jhipster.github.io/" target="_blank">Github</a></p>
+                <p translate="footer"><a href="https://github.com/sathishmurugesan/forecast" target="_blank">Github</a></p>
             </div>
         </div>
 
