--- a/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employee/employee-dialog.html
@@ -7,13 +7,13 @@
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
                     ng-model="employee.name"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_associateId">AssociateId</label>
             <input type="number" class="form-control" name="associateId" id="field_associateId"
                     ng-model="employee.associateId"
@@ -25,7 +25,7 @@
                     ng-model="employee.clientId"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_domain">Domain</label>
             <select name="domain" id="field_domain" class="form-control" ng-model="employee.domain" ng-options="cv.codeValue as cv.codeValue for cv in domains">
                 <option value="">---- Select Domain -----</option>
