--- a/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFF-dialog.html
+++ b/src/main/webapp/scripts/app/entities/rOLE_TARIFF/rOLE_TARIFF-dialog.html
@@ -8,25 +8,25 @@
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_role">Role</label>
 			<select name="role" id="field_role" class="form-control" ng-model="rOLE_TARIFF.role" ng-options="cv.codeValue as cv.codeValue for cv in roles">
                 <option value="">---- Select Role -----</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_tariff">Tariff</label>
             <input type="number" class="form-control" name="tariff" id="field_tariff"
                     ng-model="rOLE_TARIFF.tariff"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_location">Location</label>
 			<select name="location" id="field_location" class="form-control" ng-model="rOLE_TARIFF.location" ng-options="cv.codeValue as cv.codeValue for cv in locations">
                 <option value="">---- Select Location -----</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_effectiveDate">EffectiveDate</label>
             <input id="field_effectiveDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="rOLE_TARIFF.effectiveDate" is-open="datePickerForEffectiveDate.status.opened"
             />
